testing workflow with floobits

--- a/jquery.html
+++ b/jquery.html
@@ -43,6 +43,8 @@
     $('#change-me').text('new sentance')
     $('#change-me').append(' newer sentance')
     $('#change-me').append('<p> el paragrafo</p>')
+    $('#change-me').append('<p> el paragrafo 2</p>')
+    $('#change-me').append('<p> el paragrafo no 3</p>')
 
     $('#notification').html('<div class="alert">Hold on! <b>an error</b> has occured!</p>');
     $('.container').append("<p>What's the difference between <i>.append()</i> and .html()?</p>");
