--- a/jquery.html
+++ b/jquery.html
@@ -4,8 +4,10 @@
   <style>
   li:hover{background-color: #c4c4c4;}
   </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
+
 <div id="everything">
       <h1>A heading!</h1>
       <p>Here's some text!</p>
@@ -27,37 +29,122 @@
       <div id="change-me">This part needs to change!</div>
       <div id="secret">We should hide this!</div>
   </div>
-  <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+
   <script>
-  var userInput ={};
+
   $(document).ready(function(){
-    $('li').click(function(){
-      userInput.first = prompt("hej senior put some stuff here");
 
-      if (typeof this.attributes.start != "undefined") {
-                        userInput.second = this.attributes.start.value;
-      }else{
+    // var input;
+    // var token = true;
+    // while(token === true){
+    // input = prompt ("pick green black or red")
+    //   if(input!=="green" || input!=="black" || input !== "red") {
+    //     input = prompt("try again");
+    //   }else{
+    //
+    //     console.log(token);
+    //     token = false;
+    //   }
+    // }
 
-            userInput.second =  this.childNodes;
+    var input, userColor = "",lighterColor,darkerColor,light1;
+    var token = true;
+  //  var brightRed = new RGBColour(255, 0, 0); //this is wronk!
+
+    //gona keep trying a bit :)
+    //sounds good! I will message in slack with new developments on my end
+    //Kent :)
+
+    // some old school code http://www.javascripter.net/faq/rgbtohex.htm
+    function rgbToHex(R,G,B) {return toHex(R)+toHex(G)+toHex(B)}
+      function toHex(n) {
+       n = parseInt(n,10);
+       if (isNaN(n)) return "00";
+       n = Math.max(0,Math.min(n,255));
+       return "0123456789ABCDEF".charAt((n-n%16)/16)
+            + "0123456789ABCDEF".charAt(n%16);
+    }
+
+
+    while(token === true){
+       input = prompt("pick a color");
+       var something = input.split(' ',3)
+
+        if  (typeof(something) === "object" ) {
+          // light1 = something;
+          // console.log('this is',light1[0])
+          // lighterColor = rgbToHex(light1['0'],something['1'],something['2'])
+          console.log(lighterColor,userColor)
+          userColor = rgbToHex(something['0'],something['1'],something['2'])
+
+          $('body').css('background-color', userColor);
+          $('body').css('color', lighterColor);
+          console.log(userColor)
+        }
+
+        if (input === "red" || input === "green" || input === "blue"){
+          if (input == "blue") {
+            $('body').css('background-color','blue')
+            $('body').css('color', userColor || blue)
+            break;
+          }
+        } else{
+          // console.log("it works");
+
+          token = false;
+
+        }
+
       }
-    });
 
-    $('body').css('background-color', 'red');
-    $('img').attr('src','http://i.imgur.com/nWGCwiE.gif');
-    $('.holder').css('border','1px solid black')
-    $('li').css('font-weight', 'bold')
-    $('h1').css('color','blue');
-    $('p:first').css('color','green')
-    $('#secret').css('display','none')
-    $('#secret').css('display','block')
-    $('#change-me').text('new sentance')
-    $('#change-me').append(' newer sentance')
-    $('#change-me').append('<p> el paragrafo</p>')
-    $('#change-me').append('<p> el paragrafo 2</p>')
-    $('#change-me').append('<p> el paragrafo numero 3</p>')
-    $('#notification').html('<div class="alert">Hold on! <b>an error</b> has occured!</p>');
-    $('.container').append("<p>What's the difference between <i>.append()</i> and .html()?</p>");
-  });
+});
+
+// var color;  //red, white, blue
+//
+// while (true) {
+//   prompt("Choose colors among red, white, and blue");
+//   if (color !== red || color !== white || color !== blue) {
+//     prompt("Choose again!");
+//     break;
+//   }
+//   else {
+//     prompt("Your website will change to your choice");
+//     //jquery code
+//   }
+// }
+// });
+
+//asks user what color theme they'd like to view
+//user answers --> not a color --> ask again (loop)
+//user answers --> color --> change css (theme changes)
+
+  //  var userInput ={};
+  //   $('li').click(function(){
+  //     userInput.first = prompt("hej senior put some stuff here");
+  //     if (typeof this.attributes.start != "undefined") {
+  //       userInput.second = this.attributes.start.value;
+  //     }else{
+  //       userInput.second =  this.childNodes;
+  //     }
+  //   });
+  //   $().html
+  //
+  //   $('body').css('background-color', 'red');
+  //   $('img').attr('src','http://i.imgur.com/nWGCwiE.gif');
+  //   $('.holder').css('border','1px solid black')
+  //   $('li').css('font-weight', 'bold')
+  //   $('h1').css('color','blue');
+  //   $('p:first').css('color','green')
+  //   $('#secret').css('display','none')
+  //   $('#secret').css('display','block')
+  //   $('#change-me').text('new sentance')
+  //   $('#change-me').append(' newer sentance')
+  //   $('#change-me').append('<p> el paragrafo</p>')
+  //   $('#change-me').append('<p> el paragrafo 2</p>')
+  //   $('#change-me').append('<p> el paragrafo numero 3</p>')
+  //   $('#notification').html('<div class="alert">Hold on! <b>an error</b> has occured!</p>');
+  //
+  // });
 
   </script>
 </body>
